kubernetes/temporary-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwtbam-redis
spec:
  selector:
    matchLabels:
      name: wwtbam-redis
  template:
    metadata:
      labels:
        name: wwtbam-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: wwtbam-redis
spec:
  selector:
    name: wwtbam-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
